; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_exec_push_constants.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_exec_push_constants.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_cs = type { i32 }
%struct.wined3d_cs_push_constants = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_cs*, i8*)* @wined3d_cs_exec_push_constants to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wined3d_cs_exec_push_constants(%struct.wined3d_cs* %0, i8* %1) #0 {
  %3 = alloca %struct.wined3d_cs*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wined3d_cs_push_constants*, align 8
  store %struct.wined3d_cs* %0, %struct.wined3d_cs** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.wined3d_cs_push_constants*
  store %struct.wined3d_cs_push_constants* %7, %struct.wined3d_cs_push_constants** %5, align 8
  %8 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %9 = load %struct.wined3d_cs_push_constants*, %struct.wined3d_cs_push_constants** %5, align 8
  %10 = getelementptr inbounds %struct.wined3d_cs_push_constants, %struct.wined3d_cs_push_constants* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.wined3d_cs_push_constants*, %struct.wined3d_cs_push_constants** %5, align 8
  %13 = getelementptr inbounds %struct.wined3d_cs_push_constants, %struct.wined3d_cs_push_constants* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.wined3d_cs_push_constants*, %struct.wined3d_cs_push_constants** %5, align 8
  %16 = getelementptr inbounds %struct.wined3d_cs_push_constants, %struct.wined3d_cs_push_constants* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.wined3d_cs_push_constants*, %struct.wined3d_cs_push_constants** %5, align 8
  %19 = getelementptr inbounds %struct.wined3d_cs_push_constants, %struct.wined3d_cs_push_constants* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @wined3d_cs_st_push_constants(%struct.wined3d_cs* %8, i32 %11, i32 %14, i32 %17, i32 %20)
  ret void
}

declare dso_local i32 @wined3d_cs_st_push_constants(%struct.wined3d_cs*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
